Fixed spacings

--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ figure {
   background: #fff url(../images/loader.gif) no-repeat center center;
   width: 100%;
   float: left;
-  margin-bottom: 10em;
+  margin-bottom: 0em;
   clear: both; }
   #colorlib-hero .btn {
     font-size: 24px; }
@@ -305,7 +305,7 @@ figure {
           color: white;
           font-family: "Quicksand", Arial, sans-serif; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
-          margin-bottom: 0px;
+          margin-bottom: 10px;
           font-size: 44px;
           line-height: 1.3;
           font-weight: 400;
@@ -378,7 +378,7 @@ body.offcanvas {
 .colorlib-services,
 .colorlib-contact {
   padding-top: 4em;
-  /*padding-bottom: 2em;*/
+  padding-bottom: 2em;
   clear: both;
   width: 100%;
   display: block; }
